--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -63,6 +63,20 @@ import Navbar from "../components/Navbar.astro";
     background-color: rgba(255, 255, 255, 0.06);
     transition: transform 0.1s ease-out;
   	}
+
+	  .project-card {
+    min-width: 300px;
+    background: #1e1e2e;
+    padding: 20px;
+    border-radius: 15px;
+    text-align: center;
+    color: white;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  }
+  .project-card img {
+    width: 100%;
+    border-radius: 10px;
+  }
 </style>
 
 <script>
@@ -115,5 +129,8 @@ import Navbar from "../components/Navbar.astro";
     });
   });
   });
+
+  //Scroll X
+  
   </script>
   
