--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,8 +1,24 @@
-<nav class="fixed top-5 left-1/2 -translate-x-1/2 px-10 py-3 bg-base rounded-3xl shadow-[0_3px_10px_rgb(0,0,0,0.2)] z-20">
+<nav class="fixed top-5 left-1/2 -translate-x-1/2 px-10 py-3 bg-[var(--color-base)] rounded-3xl shadow-[0_3px_10px_rgb(0,0,0,0.2)] z-20">
     <ul class="flex space-x-6 text-white font-space">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li>
+            <a href="#home" class="relative after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[2px] after:bg-[var(--color-light-purple)] after:transition-all after:duration-300 hover:after:w-full">
+                Home
+            </a>
+        </li>
+        <li>
+            <a href="#about" class="relative after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[2px] after:bg-[var(--color-light-purple)] after:transition-all after:duration-300 hover:after:w-full">
+                About
+            </a>
+        </li>
+        <li>
+            <a href="#projects" class="relative after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[2px] after:bg-[var(--color-light-purple)] after:transition-all after:duration-300 hover:after:w-full">
+                Projects
+            </a>
+        </li>
+        <li>
+            <a href="#contact" class="relative after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[2px] after:bg-[var(--color-light-purple)] after:transition-all after:duration-300 hover:after:w-full">
+                Contact
+            </a>
+        </li>
     </ul>
 </nav>
