--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,20 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import "../styles/global.css";
+import AnimationSparkle from "../components/AnimationSparkle.astro";
 ---
 
 <Layout title="Portfolio">
+  <!-- Horario -->
+  <div class="flex z-20 fixed bottom-5 font-space right-24">
+    <AnimationSparkle /> <p class="text-lg text-white font-space pr-24">Chile</p>
+    <p id="current-time" class="text-lg text-white font-space"></p>
+    <p class="text-lg text-white font-space pl-2">GMT-3</p>
+    <a href="https://www.linkedin.com/in/marcos-godoy-151251331/" class="text-lg text-white font-space pl-24">LINKEDIN</a>
+    <a href="https://github.com/Zooflow" class="text-lg text-white font-space pl-24">GITHUB</a>
+  </div>
   <main class="relative">
-	<!-- Home -->
+    <!-- Home -->
     <section id="home" class="relative bg-base border-x-10 border-t-13 border-[#0e0c16] p-8 h-screen flex justify-center items-center">
       <!-- Contenedor de líneas verticales -->
       <div class="line-container absolute inset-0 flex flex-row justify-between items-stretch">
@@ -20,17 +29,80 @@ import "../styles/global.css";
       </div>
     </section>
 
-	<!-- Projects -->
-    <section class="relative bg-base border-x-10 border-[#0e0c16] p-8 overflow-hidden h-screen flex justify-center items-center">
-		<div class="line-container absolute inset-0 flex flex-row justify-between items-stretch">
-		  {Array.from({ length: 10 }).map((_, i) => (
-			<div key={i} class="line"></div>
-		  ))}
-		</div>
-		<!-- Contenido de la segunda sección -->
-		<div class="relative z-10">
-		  <h1 class="text-4xl text-white font-space">Sección 2</h1>
-		</div>
-	  </section>
+    <section id="projects" class="relative bg-base border-x-10 border-[#0e0c16] p-8 h-[140vh]">
+      <!-- Líneas de fondo -->
+      <div class="line-container absolute inset-0 flex flex-row justify-between items-stretch">
+        {Array.from({ length: 10 }).map((_, i) => (
+          <div key={i} class="line"></div>
+        ))}
+      </div>
+      
+      <!-- Panel de proyectos -->
+      <div class="relative z-10">
+        <div class="p-8">
+          <p class="text-9xl font-doppel text-light-purple pt-12 py-12">PROJECTS</p>
+          <div class="">
+            <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
+              Proyecto 1
+              <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+            </a>
+            <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
+              Proyecto 1
+              <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+            </a>
+            <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
+              Proyecto 1
+              <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+            </a>
+            <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
+              Proyecto 1
+              <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+            </a>
+            <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
+              Proyecto 1
+              <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About Me Section -->
+    <section id="about-section" class="relative bg-base border-x-10 border-[#0e0c16] p-8 overflow-hidden h-screen">
+      <div class="line-container absolute inset-0 flex flex-row justify-between items-stretch">
+        {Array.from({ length: 10 }).map((_, i) => (
+          <div key={i} class="line"></div>
+        ))}
+      </div>
+      <div class="relative z-10">
+        <p class="text-9xl font-doppel text-light-purple pt-12">ABOUT ME</p>
+        <div>
+          <p class="text-justify w-xs text-white">I'm Marcos Godoy, a Chilean Full-Stack programmer passionate about transforming ideas into unique digital experiences. With Astro and Python as my creative tools, I design solutions where code and innovation meet. Since I was 14 years old, programming has been my language to create new worlds, always guided by one question: What if we do it differently?</p>
+        </div>
+      </div>
+    </section>
   </main>
 </Layout>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    // Script del reloj
+    const timeElement = document.getElementById("current-time");
+    const miZonaHoraria = "America/Santiago"; 
+    
+    function updateTime() {
+      const now = new Date();
+      const formattedTime = new Intl.DateTimeFormat('es-CL', {
+        timeZone: miZonaHoraria,
+        hour: '2-digit',
+        minute: '2-digit',
+        second: '2-digit',
+        hour12: false,
+      }).format(now);
+      
+      timeElement.textContent = `${formattedTime}`;
+    }
+
+    updateTime();
+    setInterval(updateTime, 1000);
+  });
+</script>
