--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,16 +2,17 @@
 import Layout from '../layouts/Layout.astro';
 import "../styles/global.css";
 import AnimationSparkle from "../components/AnimationSparkle.astro";
+import AnimationShare from "../components/AnimationShare.astro";
 ---
 
 <Layout title="Portfolio">
   <!-- Horario -->
-  <div class="flex z-20 fixed bottom-5 font-space right-24">
-    <AnimationSparkle /> <p class="text-lg text-white font-space pr-24">Chile</p>
-    <p id="current-time" class="text-lg text-white font-space"></p>
-    <p class="text-lg text-white font-space pl-2">GMT-3</p>
-    <a href="https://www.linkedin.com/in/marcos-godoy-151251331/" class="text-lg text-white font-space pl-24">LINKEDIN</a>
-    <a href="https://github.com/Zooflow" class="text-lg text-white font-space pl-24">GITHUB</a>
+  <div id="horario" class="flex z-20 fixed bottom-5 font-space right-24 transition-colors duration-300 text-white" data-state="default" >
+    <AnimationSparkle /> <p class="text-lg  font-space pr-24">Chile</p>
+    <p id="current-time" class="text-lg  font-space"></p>
+    <p class="text-lg  font-space pl-2">GMT-3</p>
+    <a href="https://www.linkedin.com/in/marcos-godoy-151251331/" class="text-lg font-space pl-24">LINKEDIN</a>
+    <a href="https://github.com/Zooflow" class="text-lg font-space pl-24">GITHUB</a>
   </div>
   <main class="relative">
     <!-- Home -->
@@ -45,21 +46,26 @@ import AnimationSparkle from "../components/AnimationSparkle.astro";
             <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
               Proyecto 1
               <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+              <AnimationShare />
             </a>
             <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
               Proyecto 1
+              <AnimationShare />
               <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
             </a>
             <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
               Proyecto 1
+              <AnimationShare />
               <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
             </a>
             <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
               Proyecto 1
+              <AnimationShare />
               <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
             </a>
             <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
               Proyecto 1
+              <AnimationShare />
               <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
             </a>
           </div>
@@ -68,7 +74,7 @@ import AnimationSparkle from "../components/AnimationSparkle.astro";
     </section>
 
     <!-- About Me Section -->
-    <section id="about-section" class="relative bg-base border-x-10 border-[#0e0c16] p-8 overflow-hidden h-screen">
+    <section id="about-section" class="relative bg-base border-x-10 border-b-13 rounded-b-[15vw] border-[#0e0c16] p-8 overflow-hidden h-[75vh]">
       <div class="line-container absolute inset-0 flex flex-row justify-between items-stretch">
         {Array.from({ length: 10 }).map((_, i) => (
           <div key={i} class="line"></div>
@@ -77,8 +83,17 @@ import AnimationSparkle from "../components/AnimationSparkle.astro";
       <div class="relative z-10">
         <p class="text-9xl font-doppel text-light-purple pt-12">ABOUT ME</p>
         <div>
-          <p class="text-justify w-xs text-white">I'm Marcos Godoy, a Chilean Full-Stack programmer passionate about transforming ideas into unique digital experiences. With Astro and Python as my creative tools, I design solutions where code and innovation meet. Since I was 14 years old, programming has been my language to create new worlds, always guided by one question: What if we do it differently?</p>
+          <p class="text-justify w-xs text-white font-space">I'm Marcos Godoy, a Chilean Full-Stack programmer passionate about transforming ideas into unique digital experiences. With Astro and Python as my creative tools, I design solutions where code and innovation meet. Since I was 14 years old, programming has been my language to create new worlds, always guided by one question: What if we do it differently?</p>
         </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="relative bg-dark-purple p-8 overflow-hidden h-screen">
+      <div class="line-container absolute inset-0 flex flex-row justify-between items-stretch">
+        {Array.from({ length: 10 }).map((_, i) => (
+          <div key={i} class="line"></div>
+        ))}
       </div>
     </section>
   </main>
