--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import "../styles/global.css";
-import AnimationSparkle from "../components/AnimationSparkle.astro";
-import AnimationShare from "../components/AnimationShare.astro";
+import Time from '../components/Time.astro';
+import Project from "../components/Project.astro";
 ---
 
 <Layout title="Portfolio">
-  <!-- Horario -->
-  <div id="horario" class="flex z-20 fixed bottom-5 font-space right-24 transition-colors duration-300 text-white" data-state="default" >
-    <AnimationSparkle /> <p class="text-lg  font-space pr-24">Chile</p>
-    <p id="current-time" class="text-lg  font-space"></p>
-    <p class="text-lg  font-space pl-2">GMT-3</p>
-    <a href="https://www.linkedin.com/in/marcos-godoy-151251331/" class="text-lg font-space pl-24">LINKEDIN</a>
-    <a href="https://github.com/Zooflow" class="text-lg font-space pl-24">GITHUB</a>
-  </div>
+  <Time />
   <main class="relative">
     <!-- Home -->
     <section id="home" class="relative bg-base border-x-10 border-t-13 border-[#0e0c16] p-8 h-screen flex justify-center items-center">
@@ -43,31 +36,8 @@ import AnimationShare from "../components/AnimationShare.astro";
         <div class="p-8">
           <p class="text-9xl font-doppel text-light-purple pt-12 py-12">PROJECTS</p>
           <div class="">
-            <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
-              Proyecto 1
-              <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-              <AnimationShare />
-            </a>
-            <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
-              Proyecto 1
-              <AnimationShare />
-              <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-            </a>
-            <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
-              Proyecto 1
-              <AnimationShare />
-              <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-            </a>
-            <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
-              Proyecto 1
-              <AnimationShare />
-              <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-            </a>
-            <a href="https://tudireccion.com" target="_blank" rel="noopener noreferrer" class=" py-8 text-8xl font-space text-white font-extralight block relative group">
-              Proyecto 1
-              <AnimationShare />
-              <img src="images/imgtest.png" alt="Proyecto 1" class="absolute right-0 top-0 w-lg mt-[-60px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-            </a>
+            <Project titulo="Proyecto 1" imagen="https://static.nationalgeographic.es/files/styles/image_3200/public/nationalgeographic_1468962.webp?w=1600&h=900" enlace="https://ejemplo.com/proyecto1" />
+            <Project titulo="Proyecto 2" imagen="https://inaturalist-open-data.s3.amazonaws.com/photos/129658776/original.jpg" enlace="https://ejemplo.com/proyecto2" />
           </div>
         </div>
       </div>
@@ -98,26 +68,3 @@ import AnimationShare from "../components/AnimationShare.astro";
     </section>
   </main>
 </Layout>
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-    // Script del reloj
-    const timeElement = document.getElementById("current-time");
-    const miZonaHoraria = "America/Santiago"; 
-    
-    function updateTime() {
-      const now = new Date();
-      const formattedTime = new Intl.DateTimeFormat('es-CL', {
-        timeZone: miZonaHoraria,
-        hour: '2-digit',
-        minute: '2-digit',
-        second: '2-digit',
-        hour12: false,
-      }).format(now);
-      
-      timeElement.textContent = `${formattedTime}`;
-    }
-
-    updateTime();
-    setInterval(updateTime, 1000);
-  });
-</script>
